--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <!-- <img src="reviews-avatar-7.png" alt="" class="reviews__avatar"> -->
                 <div class="reviews__avatar" style="background:url(reviews-avatar-8.png)">
                         <h2 class="reviews__name"></h2>
-                        <p class="reviews__text"></p>
+                        <p class="reviews__text">текст</p>
                         <a href="" class="reviews__more-link">подробнее</a>
                 </div>
             </li>
