сейв с готовыми стилями для 3 секций

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <img src="burger.png" alt="" class="burger-img">
                 </div> 
                 <div class="welcome__content-text">
-                    <h1 class="welcome__content-caption">Мы делаем</h1>
+                    <h1 class="welcome__content-caption section-title">Мы делаем</h1>
                     <div class="welcome__content-desc">Натуральные бургеры</div>
                 </div>
             </div>
@@ -55,34 +55,42 @@
         </div>
     </section>
     <section class="we-best section">
-        <h1 class="we-best__title">Мы лучшие</h1>
-        <ul class="we-best__list advantages">
-            <li class="advantages__item">
-                <div class="advantages__img">
-                    <img src="icons/meat.svg" alt="" class="advantages-image">
-                </div>
-                <h2 class="advantages__caption">100% свежее мясо</h2>
-                <p class="advantages__text">Драма представляет собой деструктивный цикл. 
-                    Анапест представляет собой анапест. Ямб неравномерен.</p>
-            </li>
-            <li class="advantages__item">
+        <div class="container we-best-container">
+            <h1 class="we-best__title section-title section-title--centered">Мы лучшие</h1>
+            <ul class="we-best__list ">
+                <li class="we-best__item advantages">
                     <div class="advantages__img">
-                        <img src="icons/hand.svg" alt="" class="advantages-image">
+                        <img src="icons/meat.svg" alt="" class="advantages-image">
                     </div>
-                    <h2 class="advantages__caption">Ручная сборка</h2>
-                    <p class="advantages__text">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. 
-                        Первое полустишие притягивает сюжетный реформаторский пафос.</p>
-            </li>
-            <li class="advantages__item">
-                    <div class="advantages__img">
-                        <img src="icons/natural.svg" alt="" class="advantages-image">
+                    <div class="advantages__desc">
+                        <h2 class="advantages__caption">100% свежее мясо</h2>
+                        <p class="advantages__text">Драма представляет собой деструктивный цикл. 
+                            Анапест представляет собой анапест. Ямб неравномерен.</p>
                     </div>
-                    <h2 class="advantages__caption">Натуральные
-                            ингредиенты</h2>
-                    <p class="advantages__text">Драма представляет собой деструктивный цикл.
-                         Анапест представляет собой анапест.</p>
-            </li>
-        </ul>
+                </li>
+                <li class="we-best__item advantages">
+                        <div class="advantages__img">
+                            <img src="icons/hand.svg" alt="" class="advantages-image">
+                        </div>
+                        <div class="advantages__desc">
+                            <h2 class="advantages__caption">Ручная сборка</h2>
+                            <p class="advantages__text">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. 
+                                Первое полустишие притягивает сюжетный реформаторский пафос.</p>
+                        </div>
+                </li>
+                <li class="we-best__item advantages">
+                        <div class="advantages__img">
+                            <img src="icons/natural.svg" alt="" class="advantages-image">
+                        </div>
+                        <div class="advantages__desc">
+                            <h2 class="advantages__caption">Натуральные
+                                    ингредиенты</h2>
+                            <p class="advantages__text">Драма представляет собой деструктивный цикл.
+                                Анапест представляет собой анапест.</p>
+                        </div>
+                </li>
+            </ul>
+        </div>
     </section>
     <!-- <section class="burger-slider section">
         слайдер
@@ -106,7 +114,7 @@
                         <h2 class="reviews__name">Константин Спилберг</h2>
                         <p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
                         Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-                        <a href="" class="reviews__more-link">подробнее</a>
+                        <a href="" class="reviews__more-link btn">подробнее</a>
                     </div>
                 </div>
             </li>
@@ -116,7 +124,7 @@
                         <h2 class="reviews__name">Константин Спилберг</h2>
                         <p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
                         Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-                        <a href="" class="reviews__more-link">подробнее</a>
+                        <a href="" class="reviews__more-link btn">подробнее</a>
                     </div>
                 </div>
             </li>
@@ -126,7 +134,7 @@
                         <h2 class="reviews__name">Константин Спилберг</h2>
                         <p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
                         Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-                        <a href="" class="reviews__more-link">подробнее</a>
+                        <a href="" class="reviews__more-link btn">подробнее</a>
                     </div>
                 </div>
             </li>
@@ -136,7 +144,7 @@
                         <h2 class="reviews__name">Константин Спилберг</h2>
                         <p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
                         Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-                        <a href="" class="reviews__more-link">подробнее</a>
+                        <a href="" class="reviews__more-link btn">подробнее</a>
                     </div>
                 </div>
             </li>
@@ -146,7 +154,7 @@
                         <h2 class="reviews__name">Константин Спилберг</h2>
                         <p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
                         Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-                        <a href="" class="reviews__more-link">подробнее</a>
+                        <a href="" class="reviews__more-link btn">подробнее</a>
                     </div>
                 </div>
             </li>
@@ -156,7 +164,7 @@
                         <h2 class="reviews__name">Константин Спилберг</h2>
                         <p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
                         Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-                        <a href="" class="reviews__more-link">подробнее</a>
+                        <a href="" class="reviews__more-link btn">подробнее</a>
                     </div>
                 </div>
             </li>
@@ -166,7 +174,7 @@
                         <h2 class="reviews__name">Константин Спилберг</h2>
                         <p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
                         Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-                        <a href="" class="reviews__more-link">подробнее</a>
+                        <a href="" class="reviews__more-link btn">подробнее</a>
                     </div>
                 </div>
             </li>
@@ -176,7 +184,7 @@
                         <h2 class="reviews__name">Константин Спилберг</h2>
                         <p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
                         Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-                        <a href="" class="reviews__more-link">подробнее</a>
+                        <a href="" class="reviews__more-link btn">подробнее</a>
                     </div>
                 </div>
             </li>
