--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,500" rel="stylesheet">
 </head>
 <body>
+    
     <div class="wrapper">
         <section class="welcome section">
             <div class="container">
                 <header class="header">
-                    <img src="icons/logo.svg" class="logo">
+                    <!-- <img src="icons/logo.svg" class="logo"> -->
+                    <svg class="sprite logo">
+                        <use xlink:href="icons/sprite.svg#logo"></use>
+                    </svg>
                     <div class="header__buttons">
                         <nav class="nav">
                             <ul class="nav__list">
@@ -46,39 +50,8 @@
                 <div class="welcome__content">
                     <div class="welcome__content-image">
                         <img src="image/burger1.png" alt="" class="burger-img">
-                        <svg class="burger-drops" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 width="450.527px" height="241.369px" viewBox="0 0 450.527 241.369" enable-background="new 0 0 450.527 241.369"
-	 xml:space="preserve">
-<g>
-	<path fill-rule="evenodd" clip-rule="evenodd" fill="#E45028" d="M88.635,55.399c-0.349-0.211,8.641-10.13,6.157-15.938
-		c-0.63-6.703-10.428-6.732-14.557-15.129C75.177,13.598,84.244,6.712,91.634,7.747c8.091,0.823,16.464,8.521,18.599,16.604
-		c0.917,4.871,1.853,10.732-3.647,17.428C102.378,48.561,89.839,53.989,88.635,55.399z"/>
-</g>
-<g>
-	<path fill-rule="evenodd" clip-rule="evenodd" fill="#F9B43B" d="M166.258,26.605c-0.229-0.048,2.804-7.127,0.375-9.796
-		c-1.589-3.506-6.913-1.654-10.716-5.409c-4.743-4.843-1.104-10.296,3.099-11.145c4.544-1.098,10.521,1.471,13.184,5.437
-		c1.405,2.46,3.003,5.453,1.265,10.124C172.443,20.286,166.649,25.612,166.258,26.605z"/>
-</g>
-<g>
-	<path fill-rule="evenodd" clip-rule="evenodd" fill="#F9B43B" d="M390.979,85.785c0.297,0.081,1.074-10.269,5.551-12.002
-		c4.004-3.249,9.104,2.208,15.854,0.002c8.514-2.941,7.587-11.706,3.184-15.277c-4.649-4.078-13.218-4.619-18.76-1.469
-		c-3.148,2.105-6.85,4.732-7.67,11.402C387.6,74.435,391.128,84.355,390.979,85.785z"/>
-</g>
-<g>
-	<path fill-rule="evenodd" clip-rule="evenodd" fill="#E45028" d="M413.539,222.698c0.139,0.273,8.389-5.729,12.708-3.484
-		c5.132,0.927,4.508,8.214,10.716,11.858c7.951,4.496,13.864-1.771,13.553-7.338c-0.1-6.071-5.489-12.824-11.587-14.965
-		c-3.699-1.016-8.161-2.113-13.692,1.518C419.723,212.949,414.707,221.899,413.539,222.698z"/>
-</g>
-<g>
-	<path fill-rule="evenodd" clip-rule="evenodd" fill="#F9B43B" d="M47.977,223.166c0.022,0.232-7.637-0.575-9.47,2.533
-		c-2.881,2.555,0.46,7.094-2.005,11.836c-3.227,5.961-9.511,4.094-11.563,0.328c-2.39-4.018-1.7-10.486,1.302-14.201
-		c1.936-2.068,4.323-4.479,9.3-4.196C40.114,219.121,46.913,223.085,47.977,223.166z"/>
-</g>
-<g>
-	<path fill-rule="evenodd" clip-rule="evenodd" fill="#E45028" d="M50.721,113.398c-0.063,0.44-14.106-4.43-18.943,0.528
-		c-6.559,3.467-2.304,13.354-9.06,21.062c-8.732,9.633-19.717,3.403-21.894-4.482c-2.7-8.502,1.488-20.194,8.795-25.76
-		c4.565-2.982,10.133-6.401,19.365-3.686C37.74,102.435,48.757,112.78,50.721,113.398z"/>
-</g>
+                        <svg class="sprite drops">
+                            <use xlink:href="icons/sprite.svg#drops"></use>
                         </svg>
                     </div> 
                     <div class="welcome__content-text">
@@ -87,7 +60,7 @@
                     </div>
                 </div>
                 <a class="scroll-down-arrow">
-                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    <!-- <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     width="28.685px" height="14.479px" viewBox="0 0 28.685 14.479" enable-background="new 0 0 28.685 14.479" xml:space="preserve">
                    <g>
                        <g>
@@ -97,6 +70,9 @@
                                C16.913,13.986,15.62,14.479,14.332,14.479z"/>
                        </g>
                    </g>
+                   </svg> -->
+                   <svg class="scroll-down">
+                        <use xlink:href="icons/sprite.svg#arrow-scroll"></use>
                    </svg>
                 </a>
             </div>
@@ -107,7 +83,10 @@
                 <ul class="we-best__list ">
                     <li class="we-best__item advantages">
                         <div class="advantages__img">
-                            <img src="icons/meat.svg" alt="" class="advantages-image">
+                            <!-- <img src="icons/meat.svg" alt="" class="advantages-image"> -->
+                            <svg class="sprite meat">
+                                <use xlink:href="icons/sprite.svg#meat"></use>
+                            </svg>
                         </div>
                         <div class="advantages__desc">
                             <h2>100% свежее мясо</h2>
@@ -117,7 +96,10 @@
                     </li>
                     <li class="we-best__item advantages">
                         <div class="advantages__img">
-                            <img src="icons/hand.svg" alt="" class="advantages-image">
+                            <!-- <img src="icons/hand.svg" alt="" class="advantages-image"> -->
+                            <svg class="sprite hand">
+                                <use xlink:href="icons/sprite.svg#hand"></use>
+                            </svg>
                         </div>
                         <div class="advantages__desc">
                             <h2 >Ручная сборка</h2>
@@ -127,7 +109,10 @@
                     </li>
                     <li class="we-best__item advantages">
                         <div class="advantages__img">
-                            <img src="icons/natural.svg" alt="" class="advantages-image">
+                            <!-- <img src="icons/natural.svg" alt="" class="advantages-image"> -->
+                            <svg class="sprite natural">
+                                <use xlink:href="icons/sprite.svg#natural"></use>
+                            </svg>
                         </div>
                         <div class="advantages__desc">
                             <h2 >Натуральные
@@ -395,20 +380,41 @@
                 <div class="container container--map">
                     <div class="contacts">
                         <address class="contacts__address">Санкт-Петербург, ул.Бабушкина, д.12/1, 15</address>
-                        <a href="tel:+7 (812) 377-13-77" class="contacts__tel">+ 7 (812) 377-13-77</a>
+                        <div class="contacts__phone">    
+                            <svg class="phone-icon">
+                                <use xlink:href="icons/sprite.svg#phone"></use>
+                            </svg>
+                            <a href="tel:+7 (812) 377-13-77" class="contacts__tel">+ 7 (812) 377-13-77</a>
+                        </div>
                     </div>
                     <ul class="social__list">
                         <li class="social__item">
-                            <a href="" class="social__link">VK</a>
+                            <a href="" class="social__link">
+                                <svg class="social_icon">
+                                    <use xlink:href="icons/sprite.svg#vk"></use>
+                                </svg>
+                            </a>
                         </li>
                         <li class="social__item">
-                            <a href="" class="social__link">FB</a>
+                            <a href="" class="social__link">
+                                 <svg class="social_icon">
+                                    <use xlink:href="icons/sprite.svg#fb"></use>
+                                </svg>
+                            </a>
                         </li>
                         <li class="social__item">
-                            <a href="" class="social__link">INST</a>
+                            <a href="" class="social__link">
+                                 <svg class="social_icon">
+                                    <use xlink:href="icons/sprite.svg#photo"></use>
+                                </svg>
+                            </a>
                         </li>
                         <li class="social__item">
-                            <a href="" class="social__link">TW</a>
+                            <a href="" class="social__link">
+                                <svg class="social_icon">
+                                    <use xlink:href="icons/sprite.svg#tw"></use>
+                                </svg>
+                            </a>
                         </li>
                     </ul>
                 </div>
